--- a/1sabor.html
+++ b/1sabor.html
@@ -4,6 +4,7 @@
   <head>
     <script type="application/javascript" src="jquery.js"></script>
     <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="1sabor.css" />
     <script>
       var current;
       var lock = false;
@@ -43,41 +44,32 @@
     <div>
       <div class="left menu">
         <p>
-          <a href="1sabor.html">1 Sabor</a>
+          1 Sabor
         </p>
+        <div id="selected-menu">
+        </div>
       </div>
       <div class="right menu">
         <p>
-          2 Sabores
+          <a href="index.html">2 Sabores</a>
         </p>
-        <div id="selected-menu">
-
-        </div>
       </div>
     </div>
     <div class="coiso">
       <div id="sabor1" onscroll="check(1);">
-        <img class="sabor" id="1" src="1.png" />
-        <img class="sabor" id="2" src="4.png" />
-        <img class="sabor" id="3" src="1.png" />
-      </div>
-      <div id="sabor2" class="right" onscroll="check(2);">
-        <img class="sabor" id="s4" src="2.png" />
-        <img class="sabor" id="s5" src="3.png" />
-        <img class="sabor" id="s6" src="2.png" />
-        <img class="sabor" id="s6" src="2.png" />
+        <img class="sabor" id="1" src="pep.png" />
+        <img class="sabor" id="1" src="pep.png" />
+        <img class="sabor" id="1" src="pep.png" />
+        <img class="sabor" id="1" src="pep.png" />
+        <img class="sabor" id="1" src="pep.png" />
       </div>
     </div>
     <div class="coiso">
-      <div class="left sabor-desc">
+      <div class="sabor-desc">
         <h1>
           Calabresa
         </h1> <br><span>cebola milho brocolis <br>cimento feijao</span>
       </div>
-      <div class="right sabor-desc">
-        <h1>
-          Portuguesa
-        </h1> <br><span>cebola milho pao carne<br> queijo sl</span></div>
     </div>
     <div>
       <div id="cta"><span>R$ 35</span>
