--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-
   <head>
     <script type="application/javascript" src="jquery.js"></script>
     <link rel="stylesheet" href="main.css" />
