--- a/1sabor.html
+++ b/1sabor.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <script type="application/javascript" src="jquery.js"></script>
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="1sabor.css" />
+    <script type="application/javascript" src="js/jquery.js"></script>
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/1sabor.css" />
     <script>
       var current;
       var lock = false;
