--- a/checkout.html
+++ b/checkout.html
@@ -19,8 +19,8 @@
       </div>
       <div class="sec">
         <div class="pizza">
-          <img class="sabor" src="1.png">
-          <img class="sabor"  src="2.png">
+          <img class="sabor" src="imgs/1.png">
+          <img class="sabor"  src="imgs/2.png">
         </div>
         <div>
           Sabores
@@ -66,6 +66,6 @@
         </div>
       </div>
     </div>
-  <link rel="stylesheet" href="main.css" />
-  <link rel="stylesheet" href="checkout.css" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/checkout.css" />
 </html>
