--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
   </body>
-  <script type="application/javascript" src="jquery.js"></script>
+  <script type="application/javascript" src="js/jquery.js"></script>
   <script>
     var current;
     var lock = false;
@@ -84,5 +84,5 @@
     }
 
   </script>
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="css/main.css" />
 </html>
